@@ -4,7 +4,8 @@ Changelog
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- zest.releaser now only runs Pyroma on Python packages.
+  [maurits]
 
 
 1.3 (2013-03-15)
